// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu helper functions getCheckboxMenu should render a correct checkbox settings menu 1`] = `
Array [
  Object {
    "checked": true,
    "click": [Function],
    "label": "Launch at start label",
    "type": "checkbox",
  },
  Object {
    "checked": false,
    "click": [Function],
    "label": "Show notifications label",
    "type": "checkbox",
  },
]
`;

exports[`menu helper functions getDeploysMenu should render a correct deploy menu 1`] = `
Array [
  Object {
    "click": [Function],
    "label": "Overview",
  },
  Object {
    "type": "separator",
  },
  Object {
    "click": [Function],
    "label": "production: building → master (less than a minute ago in 123s)",
  },
  Object {
    "enabled": false,
    "label": "—",
  },
  Object {
    "click": [Function],
    "label": "production: ready → master (1 day ago in 126s)",
  },
]
`;

exports[`menu helper functions getSitesMenu should render a correct sites menu 1`] = `
Array [
  Object {
    "checked": false,
    "click": [Function],
    "label": "foo.com",
    "type": "radio",
  },
  Object {
    "checked": true,
    "click": [Function],
    "label": "current.com",
    "type": "radio",
  },
  Object {
    "checked": false,
    "click": [Function],
    "label": "bar.com",
    "type": "radio",
  },
]
`;

exports[`menu helper functions getSitesMenu should render a correct sites menu 2`] = `
Array [
  Object {
    "click": [Function],
    "label": "History",
  },
  Object {
    "type": "separator",
  },
  Object {
    "enabled": false,
    "label": "no recent incidents",
  },
]
`;
